tests/fail/add_int_str.us
fn main() {
    10 + "12";
    
}